import {join} from 'path';
import {buildSchema, parse, concatAST} from 'graphql';
import {compile, AST} from 'graphql-tool-utilities/ast';
import validateFixtureAgainstAST from '../src/validate';

describe('validateFixtureAgainstAST()', () => {
  it('validates strings', () => {
    let ast = createAST(`
      type Query { name: String! }
    `, 'query NameQuery { name }');

    expect(validate({name: 42}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({name: null}, ast)).toMatchSnapshot();
    expect(validate({name: 'Chris'}, ast)).toMatchSnapshot();

    ast = createAST(`
      type Query { address: String }
    `, 'query AddressQuery { address }');

    expect(validate({address: 42}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({address: null}, ast)).toMatchSnapshot();
    expect(validate({address: 'Chris'}, ast)).toMatchSnapshot();
  });

  it('validates numbers', () => {
    let ast = createAST(`
      type Query { age: Int! }
    `, 'query AgeQuery { age }');

    expect(validate({age: '42'}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({age: null}, ast)).toMatchSnapshot();
    expect(validate({age: 42}, ast)).toMatchSnapshot();
    expect(validate({age: 42.5}, ast)).toMatchSnapshot();

    ast = createAST(`
      type Query { height: Float }
    `, 'query HeightQuery { height }');

    expect(validate({height: '42.3'}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({height: null}, ast)).toMatchSnapshot();
    expect(validate({height: 42.3}, ast)).toMatchSnapshot();
    expect(validate({height: 42}, ast)).toMatchSnapshot();
  });

  it('validates booleans', () => {
    let ast = createAST(`
      type Query { married: Boolean! }
    `, 'query MarriedQuery { married }');

    expect(validate({married: 'true'}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({married: null}, ast)).toMatchSnapshot();
    expect(validate({married: true}, ast)).toMatchSnapshot();
    expect(validate({married: false}, ast)).toMatchSnapshot();

    ast = createAST(`
      type Query { responded: Boolean }
    `, 'query RespondedQuery { responded }');

    expect(validate({responded: 'true'}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({responded: null}, ast)).toMatchSnapshot();
    expect(validate({responded: true}, ast)).toMatchSnapshot();
    expect(validate({responded: false}, ast)).toMatchSnapshot();
  });

  it('validates enums', () => {
    let ast = createAST(`
      enum Generation {
        FIRST
        SECOND
        THIRD
      }
      type Query { generation: Generation! }
    `, 'query GenerationQuery { generation }');

    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({generation: null}, ast)).toMatchSnapshot();
    expect(validate({generation: 'SEVENTH'}, ast)).toMatchSnapshot();
    expect(validate({generation: true}, ast)).toMatchSnapshot();
    expect(validate({generation: 'SECOND'}, ast)).toMatchSnapshot();

    ast = createAST(`
      enum Generation { FIRST, SECOND, THIRD }
      type Query { generation: Generation }
    `, 'query GenerationQuery { generation }');

    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({generation: null}, ast)).toMatchSnapshot();
    expect(validate({generation: 'SEVENTH'}, ast)).toMatchSnapshot();
    expect(validate({generation: true}, ast)).toMatchSnapshot();
    expect(validate({generation: 'SECOND'}, ast)).toMatchSnapshot();
  });

  describe('lists', () => {
    it('validates the types of lists', () => {
      const ast = createAST(`
        type Query { favoriteNumbers: [Int!]! }
      `, 'query FavoriteNumbersQuery { favoriteNumbers }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({favoriteNumbers: null}, ast)).toMatchSnapshot();
      expect(validate({favoriteNumbers: []}, ast)).toMatchSnapshot();
      expect(validate({favoriteNumbers: {}}, ast)).toMatchSnapshot();
      expect(validate({favoriteNumbers: [1, 2.5, null, true, 5]}, ast)).toMatchSnapshot();
    });

    it('validates nested arrays', () => {
      const ast = createAST(`
        type Query { sets: [[Int!]!] }
      `, 'query SetsQuery { sets }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({sets: null}, ast)).toMatchSnapshot();
      expect(validate({sets: []}, ast)).toMatchSnapshot();
      expect(validate({sets: [1, 2, 3]}, ast)).toMatchSnapshot();
      expect(validate({sets: [[1, 2, null], [true, {}, 3]]}, ast)).toMatchSnapshot();
      expect(validate({sets: [null, [1, 2], true]}, ast)).toMatchSnapshot();
    });

    it('validates objects nested in arrays', () => {
      const ast = createAST(`
        type Person {
          name: String!
          age: Int!
        }
        type Query { people: [Person!]! }
      `, 'query PeopleQuery { people { name } }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({people: null}, ast)).toMatchSnapshot();
      expect(validate({people: []}, ast)).toMatchSnapshot();
      expect(validate({people: [1]}, ast)).toMatchSnapshot();
      expect(validate({people: [{}]}, ast)).toMatchSnapshot();
      expect(validate({people: [{name: true}]}, ast)).toMatchSnapshot();
      expect(validate({people: [{name: 'Chris'}]}, ast)).toMatchSnapshot();
      expect(validate({people: [{name: 'Chris', age: 42}]}, ast)).toMatchSnapshot();
    });
  });

  describe('objects', () => {
    it('validates that the value is actually an object', () => {
      const ast = createAST(`
        type Person { name: String! }
        type Query { person: Person! }
      `, 'query PersonQuery { person { name } }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({person: null}, ast)).toMatchSnapshot();
      expect(validate({person: {}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: true}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: 'Chris'}}, ast)).toMatchSnapshot();
    });

    it('creates errors for keys not present in the query', () => {
      const ast = createAST(`
        type Person {
          name: String!
          age: Int
        }
        type Query { person: Person! }
      `, 'query PersonQuery { person { name } }');

      expect(validate({person: {name: 'Chris', age: 42}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: 'Chris', foo: true}}, ast)).toMatchSnapshot();
    });

    it('validates nested objects', () => {
      const ast = createAST(`
        type Address { number: Int }
        type Person { address: Address! }
        type Query { person: Person! }
      `, 'query AddressQuery { person { address { number } } }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({person: null}, ast)).toMatchSnapshot();
      expect(validate({person: {}}, ast)).toMatchSnapshot();
      expect(validate({person: {address: {}}}, ast)).toMatchSnapshot();
      expect(validate({person: {address: {number: '63'}}}, ast)).toMatchSnapshot();
      expect(validate({person: {address: {number: 15.4}}}, ast)).toMatchSnapshot();
      expect(validate({person: {address: {number: 63}}}, ast)).toMatchSnapshot();
      expect(validate({person: {address: {street: 'Main st'}}}, ast)).toMatchSnapshot();
    });

    it('validates aliases', () => {
      let ast = createAST(`
        type Person { name: String! }
        type Query { person: Person! }
      `, 'query PersonQuery { person { nom: name } }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({person: null}, ast)).toMatchSnapshot();
      expect(validate({person: {}}, ast)).toMatchSnapshot();
      expect(validate({person: {nom: true}}, ast)).toMatchSnapshot();
      expect(validate({person: {nom: 'Chris'}}, ast)).toMatchSnapshot();

      ast = createAST(`
        type Person { name: String! }
        type Query { person: Person! }
      `, 'query PersonQuery { chris: person { nom: name } }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({chris: null}, ast)).toMatchSnapshot();
      expect(validate({chris: {}}, ast)).toMatchSnapshot();
      expect(validate({chris: {nom: true}}, ast)).toMatchSnapshot();
      expect(validate({chris: {nom: 'Chris'}}, ast)).toMatchSnapshot();
    });
  });

  describe('fragments', () => {
    it('includes fields from inline fragments', () => {
      const ast = createAST(`
        type Person { name: String! }
        type Query { person: Person! }
      `, 'query PersonQuery { person { ... on Person { name } } }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({person: null}, ast)).toMatchSnapshot();
      expect(validate({person: {}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: true}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: 'Chris'}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: 'Chris', age: 42}}, ast)).toMatchSnapshot();
    });

    it('includes fields from separate fragments', () => {
      const ast = createAST(`
        type Person { name: String! }
        type Query { person: Person! }
      `, 'query PersonQuery { person { ...PersonFragment } }', 'fragment PersonFragment on Person { name }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({person: null}, ast)).toMatchSnapshot();
      expect(validate({person: {}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: true}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: 'Chris'}}, ast)).toMatchSnapshot();
      expect(validate({person: {name: 'Chris', age: 42}}, ast)).toMatchSnapshot();
    });

    it('treats fields on interface type spreads to be nullable', () => {
      const ast = createAST(`
        interface Animal { name: String! }
        type Cat implements Animal {
          name: String!
          purrs: Boolean!
        }
        type Dog implements Animal {
          name: String!
          barks: Boolean!
        }
        type Query { animals: [Animal!]! }
      `, 'query DogQuery { animals { name, ...DogFragment } }', 'fragment DogFragment on Dog { barks }');

      expect(validate({}, ast)).toMatchSnapshot();
      expect(validate({animals: null}, ast)).toMatchSnapshot();
      expect(validate({animals: []}, ast)).toMatchSnapshot();
      expect(validate({animals: [{}]}, ast)).toMatchSnapshot();
      expect(validate({animals: [{name: 'Winston'}]}, ast)).toMatchSnapshot();
      expect(validate({animals: [{name: 'Winston', barks: 40}]}, ast)).toMatchSnapshot();
      expect(validate({animals: [{name: 'Winston', barks: true}]}, ast)).toMatchSnapshot();
    });
  });

  it('works with multiple top-level items', () => {
    const ast = createAST(`
      type Query {
        name: String!
        age: Int
      }
    `, 'query MyQuery { name, age }');

    expect(validate({name: 42}, ast)).toMatchSnapshot();
    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({name: null}, ast)).toMatchSnapshot();
    expect(validate({name: null, age: 42.5}, ast)).toMatchSnapshot();
    expect(validate({name: 'Chris'}, ast)).toMatchSnapshot();
    expect(validate({name: 'Chris', age: null}, ast)).toMatchSnapshot();
    expect(validate({name: 'Chris', age: 42}, ast)).toMatchSnapshot();
    expect(validate({name: 'Chris', age: 42.5}, ast)).toMatchSnapshot();
    expect(validate({name: 'Chris', age: '42'}, ast)).toMatchSnapshot();
  });

  it('validates mutations', () => {
    const ast = createAST(`
      type Person {
        hadFunBirthday: Boolean
      }
      type Mutation {
        haveBirthday(wasFun: Boolean!): Person!
      }
      type Query {
        person: Person
      }
    `, `
      mutation MyMutation {
        haveBirthday(fun: true) {
          hadFunBirthday
        }
      }
    `);

    expect(validate({}, ast)).toMatchSnapshot();
    expect(validate({haveBirthday: true}, ast)).toMatchSnapshot();
    expect(validate({haveBirthday: {}}, ast)).toMatchSnapshot();
    expect(validate({haveBirthday: {hadFunBirthday: null}}, ast)).toMatchSnapshot();
    expect(validate({haveBirthday: {hadFunBirthday: 'true'}}, ast)).toMatchSnapshot();
    expect(validate({haveBirthday: {hadFunBirthday: true}}, ast)).toMatchSnapshot();
    expect(validate({haveBirthday: {hadFunBirthday: false}}, ast)).toMatchSnapshot();
  });
});

function validate(fixture: any, ast: AST) {
  const queryName = Object.keys(ast.operations)[0];
  return validateFixtureAgainstAST({
    path: join(queryName, 'fixture.json'),
    content: fixture,
  }, ast);
}

function createAST(schemaString: string, ...queryStrings: string[]) {
  const schema = buildSchema(schemaString);
  const ast = concatAST(queryStrings.map((queryString) => parse(queryString)));
  return compile(schema, ast);
}
